# pyiba

./: LICENSE  README.md  setup.cfg  setup.py
docs/: Makefile  mkdocs.yml
docs/source/: index.md  mkdocs.yml
pyiba/: __init__.py  __license__.py  __main__.py  __version__.py  app_argparser.py  app_config.py  app_const.py  app_logger.py  body.py  main_gui.py
tests/: run_compile.sh
