[metadata]
name = pyiba
version = 0.1.0
description = PythonでIBA（任意の用途）を実装するためのパッケージ
long_description = file: README.md
long_description_content_type = text/markdown
author = あなたの名前
author_email = your.email@example.com
url = https://github.com/yourusername/pyiba
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    importlib-metadata; python_version < "3.10"

[options.package_data]
* = *.md, *.txt

[options.extras_require]
dev =
    mkdocs

[options.entry_points]
console_scripts =
    pyiba = pyiba.__main__:main
